# opencbdc-tx

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  .nvmrc  .pylintrc  2pc-compose.cfg  2pc-local.cfg  2pc.cfg.sample  CITATION.cff  CMakeLists.txt  COPYING  Deploy.Dockerfile  Dockerfile  Dockerfile-base  Dockerfile.debug  Doxyfile  NEWS.md  README.md  atomizer-compose.cfg  atomizer-local.cfg  code_refactor.sh  docker-compose-2pc.yml  docker-compose-3pc-test.yml  docker-compose-3pc.yml  docker-compose-atomizer.yml  docker-compose-dev-2pc.yml  docker-compose-parsec-test.yml  docker-compose-parsec.yml  docker-compose-prebuilt-2pc.yml  docker-compose-prebuilt-atomizer.yml  docker-compose-test-2pc.yml  docker-compose-test-atomizer.yml  file_rename.sh  multimachine.cfg.sample  requirements.txt  stderr  stdout
benchmarks/: CMakeLists.txt  audits.cpp  low_level.cpp  transactions.cpp  uhs_leveldb.cpp  uhs_set.cpp
config/tools/: 2pc_config_template.tmpl  CMakeLists.txt  atomizer_config_template.tmpl  config_generator.cpp  config_generator.hpp  generate_config.cpp  generate_configd.cpp
src/: CMakeLists.txt
src/3pc/: CMakeLists.txt  util.cpp  util.hpp
src/3pc/agent/: CMakeLists.txt  agentd.cpp  client.cpp  client.hpp  format.cpp  format.hpp  impl.cpp  impl.hpp  interface.cpp  interface.hpp  messages.hpp  server_interface.cpp  server_interface.hpp
src/3pc/broker/: CMakeLists.txt  impl.cpp  impl.hpp  interface.hpp
src/3pc/directory/: impl.cpp  impl.hpp  interface.hpp
src/3pc/runtime_locking_shard/: CMakeLists.txt  client.cpp  client.hpp  controller.cpp  controller.hpp  format.cpp  format.hpp  impl.cpp  impl.hpp  interface.hpp  messages.hpp  replicated_shard.cpp  replicated_shard.hpp  replicated_shard_client.cpp  replicated_shard_client.hpp  replicated_shard_interface.hpp  runtime_locking_shardd.cpp  server.cpp  server.hpp  state_machine.cpp  state_machine.hpp
src/archiver/: archiverd.cpp  client.cpp  client.hpp  controller.cpp  controller.hpp
src/atomizer/: CMakeLists.txt  atomizer-raftd.cpp  atomizer.cpp  atomizer.hpp  atomizer_raft.cpp  atomizer_raft.hpp  block.cpp  block.hpp  controller.cpp  controller.hpp  format.cpp  format.hpp  messages.cpp  messages.hpp  state_machine.cpp  state_machine.hpp
src/client/: CMakeLists.txt  atomizer_client.cpp  atomizer_client.hpp  client-cli.cpp  client.cpp  client.hpp  twophase_client.cpp  twophase_client.hpp
src/common/: CMakeLists.txt  buffer.cpp  buffer.hpp  cache_set.hpp  config.hpp  hash.hpp  hashmap.cpp  hashmap.hpp  keys.hpp  logging.hpp  variant_overloaded.hpp
src/coordinator/: CMakeLists.txt  client.cpp  client.hpp  controller.cpp  controller.hpp  coordinatord.cpp  distributed_tx.cpp  distributed_tx.hpp  format.cpp  interface.hpp  messages.hpp  server.cpp  server.hpp  state_machine.cpp  state_machine.hpp
src/locking_shard/: CMakeLists.txt  client.cpp  client.hpp  controller.cpp  controller.hpp  format.cpp  interface.cpp  interface.hpp  locking_shard.cpp  locking_shard.hpp  locking_shardd.cpp  messages.cpp  messages.hpp  state_machine.cpp  state_machine.hpp  status_client.cpp  status_client.hpp  status_interface.hpp  status_messages.hpp  status_server.cpp  status_server.hpp
src/network/: CMakeLists.txt  connection_manager.cpp  connection_manager.hpp  peer.cpp  peer.hpp  socket.cpp  socket.hpp  socket_selector.cpp  tcp_socket.hpp
src/parsec/: CMakeLists.txt  README.md  util.cpp  util.hpp
src/raft/: CMakeLists.txt  console_logger.hpp  index_comparator.cpp  log_store.hpp  messages.cpp  messages.hpp  node.hpp  rpc_server.hpp  serialization.hpp  util.hpp
src/rpc/: async_server.hpp  blocking_server.hpp  client.hpp  format.cpp  format.hpp  messages.hpp  server.hpp  tcp_client.hpp  tcp_server.hpp
src/sentinel/: CMakeLists.txt  client.cpp  client.hpp  controller.cpp  controller.hpp  format.cpp  interface.hpp  sentineld.cpp  server.hpp
src/sentinel_2pc/: CMakeLists.txt  controller.cpp  controller.hpp  interface.hpp  server.hpp
src/serialization/: CMakeLists.txt  buffer_serializer.hpp  format.hpp  ostream_serializer.cpp  serializer.hpp  size_serializer.hpp  util.hpp
src/shard/: controller.cpp  controller.hpp  shard.cpp  shard.hpp  shardd.cpp
src/transaction/: CMakeLists.txt  messages.cpp  messages.hpp  transaction.cpp  transaction.hpp  validation.hpp  wallet.cpp  wallet.hpp
src/uhs/: CMakeLists.txt
src/util/: CMakeLists.txt
src/watchtower/: block_cache.cpp  block_cache.hpp  client.cpp  client.hpp  controller.cpp  controller.hpp  error_cache.cpp  error_cache.hpp  messages.cpp  messages.hpp  status_update.hpp  status_update_messages.cpp  status_update_messages.hpp  tx_error_messages.cpp  tx_error_messages.hpp  watchtower.cpp  watchtowerd.cpp
tests/: .clang-tidy  CMakeLists.txt  util.cpp  util.hpp
tests/integration/: CMakeLists.txt  atomizer_end_to_end_test.cpp  atomizer_raft_integration_test.cpp  correct_state_update.lua  data_hazard_contract.lua  gtest_evm_jsonrpc_client.cpp  gtest_evm_jsonrpc_client.hpp  integration_tests.cfg  integration_tests_2pc.cfg  mock_system.cpp  mock_system.hpp  parsec_evm_end_to_end_test.cpp  parsec_py_end_to_end_test.cpp  replicated_atomizer.cfg  replicated_atomizer_integration_tests.cpp  replicated_shard.cfg  replicated_shard_integration_tests.cpp  sample_erc20_contract.cpp  sample_erc20_contract.hpp  sentinel_2pc_integration_test.cpp  sentinel_integration_test.cpp  shard_integration_test.cpp  smart_contract_atomic_commit_test.cpp  threepc_evm_end_to_end_test.cpp  two_phase_end_to_end_test.cpp  watchtower_integration_test.cpp
tests/unit/: CMakeLists.txt  archiver_test.cpp  atomizer_test.cpp  buffer_test.cpp  config_gen_test.cpp  config_test.cpp  config_tests.cfg  message_test.cpp  minter_validation_test.cpp  network_test.cpp  raft_test.cpp  serialization_test.cpp  shard_test.cpp  socket_test.cpp  transaction_test.cpp  twophase_test.cpp  uhs_test.cpp  validation_test.cpp  wallet_test.cpp
tools/audit/: CMakeLists.txt  audit.cpp
tools/bench/: CMakeLists.txt  atomizer-cli-watchtower.cpp  twophase_gen.cpp
tools/shard-seeder/: CMakeLists.txt  shard-seeder.cpp
(+570 files in other folders)
