project(sys)

include_directories(.)

add_compile_options(-Wconversion)

add_subdirectory(archiver)
add_subdirectory(atomizer)
add_subdirectory(client)
add_subdirectory(common)
add_subdirectory(coordinator)
add_subdirectory(locking_shard)
add_subdirectory(network)
add_subdirectory(raft)
add_subdirectory(rpc)
add_subdirectory(sentinel)
add_subdirectory(sentinel_2pc)
add_subdirectory(serialization)
add_subdirectory(shard)
add_subdirectory(transaction)
add_subdirectory(watchtower)
